force-app/main/default/objects/Service__c/fields/BizAttribute__c.field-meta.xml
<CustomField>
    <fullName>BizAttribute__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Biz. Attribute</label>
    <referenceTo>BizAttribute__c</referenceTo>
    <relationshipName>BO_Service_Solution</relationshipName>
    <type>Lookup</type>
</CustomField>