force-app/main/default/objects/Service__c/fields/Changed__c.field-meta.xml
<CustomField>
    <fullName>Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>서비스 변경여부</description>
    <label>Changed</label>
    <type>Checkbox</type>
</CustomField>