force-app/main/default/objects/Service__c/fields/Delivery_Dept_Code__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Dept_Code__c</fullName>
    <formula>DeliveryDepartment__r.CostCenter__c</formula>
    <label>Delivery Dept. Code</label>
    <type>Text</type>
</CustomField>