force-app/main/default/objects/Service__c/fields/DeliveryDepartment__c.field-meta.xml
<CustomField>
    <fullName>DeliveryDepartment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Department(IF)</label>
    <referenceTo>CostCenter__c</referenceTo>
    <relationshipLabel>Service</relationshipLabel>
    <relationshipName>Service</relationshipName>
    <type>Lookup</type>
</CustomField>