force-app/main/default/objects/Service__c/fields/DeliveryDepartmentBackup__c.field-meta.xml
<CustomField>
    <fullName>DeliveryDepartmentBackup__c</fullName>
    <label>DeliveryDepartmentBackup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>