force-app/main/default/objects/Service__c/fields/DeliveryDepartmentNmBackup__c.field-meta.xml
<CustomField>
    <fullName>DeliveryDepartmentNmBackup__c</fullName>
    <label>DeliveryDepartmentNmBackup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>