force-app/main/default/objects/Service__c/fields/ItemNumber__c.field-meta.xml
<CustomField>
    <fullName>ItemNumber__c</fullName>
    <label>Item Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>