force-app/main/default/objects/Service__c/fields/Sales_Dept_Code__c.field-meta.xml
<CustomField>
    <fullName>Sales_Dept_Code__c</fullName>
    <formula>SalesDepartment__r.CostCenter__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Dept. Code</label>
    <type>Text</type>
</CustomField>