force-app/main/default/objects/Service__c/fields/SalesDepartment__c.field-meta.xml
<CustomField>
    <fullName>SalesDepartment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Department(IF)</label>
    <referenceTo>CostCenter__c</referenceTo>
    <relationshipLabel>Service (Sales DepartmentC)</relationshipLabel>
    <relationshipName>Service1</relationshipName>
    <type>Lookup</type>
</CustomField>