force-app/main/default/objects/Service__c/fields/SalesDepartmentBackup__c.field-meta.xml
<CustomField>
    <fullName>SalesDepartmentBackup__c</fullName>
    <label>SalesDepartmentBackup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>