force-app/main/default/objects/Service__c/fields/SalesDepartmentNmBackup__c.field-meta.xml
<CustomField>
    <fullName>SalesDepartmentNmBackup__c</fullName>
    <label>SalesDepartmentNmBackup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>