force-app/main/default/objects/Service__c/fields/SAP_SendTime__c.field-meta.xml
<CustomField>
    <fullName>SAP_SendTime__c</fullName>
    <description>SAP전송 시각</description>
    <label>SAP SendTime</label>
    <type>DateTime</type>
</CustomField>