force-app/main/default/objects/Service__c/fields/sDeliveryDepartment__c.field-meta.xml
<CustomField>
    <fullName>sDeliveryDepartment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Department</label>
    <referenceTo>CostCenter__c</referenceTo>
    <relationshipLabel>Services (sDeliveryDepartment)</relationshipLabel>
    <relationshipName>DeliveryDepartment</relationshipName>
    <type>Lookup</type>
</CustomField>