force-app/main/default/objects/Service__c/fields/SendSAP__c.field-meta.xml
<CustomField>
    <fullName>SendSAP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SAP전송여부</description>
    <label>SendSAP</label>
    <type>Checkbox</type>
</CustomField>