force-app/main/default/objects/Service__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service(IF)</label>
    <referenceTo>Master_Service__c</referenceTo>
    <relationshipLabel>Services</relationshipLabel>
    <relationshipName>BO_Service_Solution</relationshipName>
    <type>Lookup</type>
</CustomField>