force-app/main/default/objects/Service__c/fields/ServiceBackup__c.field-meta.xml
<CustomField>
    <fullName>ServiceBackup__c</fullName>
    <description>전송한 서비스코드 백업</description>
    <label>ServiceBackup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>