force-app/main/default/objects/Service__c/fields/ServiceNmBackup__c.field-meta.xml
<CustomField>
    <fullName>ServiceNmBackup__c</fullName>
    <description>서비스명 백업</description>
    <label>ServiceNmBackup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>