force-app/main/default/objects/Service__c/fields/sSalesDepartment__c.field-meta.xml
<CustomField>
    <fullName>sSalesDepartment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Department</label>
    <referenceTo>CostCenter__c</referenceTo>
    <relationshipLabel>Services (sSalesDepartment)</relationshipLabel>
    <relationshipName>SalesDepartment</relationshipName>
    <type>Lookup</type>
</CustomField>