force-app/main/default/objects/Service__c/fields/sService__c.field-meta.xml
<CustomField>
    <fullName>sService__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service</label>
    <referenceTo>Master_Service__c</referenceTo>
    <relationshipLabel>Services (sService)</relationshipLabel>
    <relationshipName>Services</relationshipName>
    <type>Lookup</type>
</CustomField>